Fixing bug on iphone

--- a/root/public/stylessheet.css
+++ b/root/public/stylessheet.css
@@ -54,12 +54,12 @@ body {
 .teamBox {
   color: white;
   background: #333;
-  padding: 1.5em;
+  padding: 1em;
   border-radius: 5px;
   border: 6px solid white;
   width: 10vw;
   height: 9vh;
-  margin-bottom: 1em;
+  margin-bottom: 1.5em;
   display: inline-block;
   -webkit-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.44);
   -moz-box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.44);
@@ -76,6 +76,7 @@ p {
 #scoreTotalTeamOne,
 #scoreTotalTeamTwo {
   font-size: 1.5em;
+  padding: 0.25em;
 }
 
 #endButton {
